fix: pop up card scrolling on mobile - card height was too big and spacing inside was too big for screen

--- a/frontend/src/components/CheckoutWrapper/TotalCard/totalCard.scss
+++ b/frontend/src/components/CheckoutWrapper/TotalCard/totalCard.scss
@@ -21,8 +21,8 @@
 			transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
 
 			position: absolute;
-			max-height: 100vh;
-			top: 9%;
+			max-height: 100%;
+			top: 2%;
 			bottom: 0;
 
 			.card-body {
@@ -48,7 +48,11 @@
 	}
 
 	.list + .list {
-		margin-top: rem(31);
+		margin-top: rem(15);
+
+		@include breakpoint-min(md) {
+			margin-top: rem(28);
+		}
 	}
 
 	.heading {
