--- a/frontend/src/scss/layout/_card.scss
+++ b/frontend/src/scss/layout/_card.scss
@@ -46,6 +46,6 @@
 	}
 
 	.card-body {
-		padding: em(30) $card-cap-padding-x;
+		padding: em(20) $card-cap-padding-x;
 	}
 }
